--- a/client/public/index.html
+++ b/client/public/index.html
@@ -9,6 +9,16 @@
       name="Chauchera, aplicación para finanzas personales"
       content="Web site created using create-react-app"
     />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap"
+    />
+    <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/icon?family=Material+Icons"
+    />
+
+
 
 
 
